Asteria/force-app/main/default/objects/Rig__c/Rig__c.object-meta.xml
<CustomObject>
    <description>An individual Rig located on an asteroid designated as a Mining Site.</description>
    <label>Rig</label>
    <nameField>
        <displayFormat>Rig-{0000}</displayFormat>
        <label>Rig Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rigs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>