Asteria/force-app/main/default/objects/Rig__c/fields/Crew_Members__c.field-meta.xml
<CustomField>
    <fullName>Crew_Members__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Squad (Crew Members) assigned to this Rig.</description>
    <inlineHelpText>The Squad (Crew Members) assigned to this Rig.</inlineHelpText>
    <label>Crew Members</label>
    <referenceTo>Crew_Members__c</referenceTo>
    <relationshipLabel>Rigs</relationshipLabel>
    <relationshipName>Rigs</relationshipName>
    <type>Lookup</type>
</CustomField>