Asteria/force-app/main/default/objects/Rig__c/fields/Equipment__c.field-meta.xml
<CustomField>
    <fullName>Equipment__c</fullName>
    <description>Equipment currently in use by this Rig.</description>
    <inlineHelpText>Equipment currently in use by this Rig.</inlineHelpText>
    <label>Equipment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Equipment</valueSetName>
    </valueSet>
</CustomField>