Asteria/force-app/main/default/objects/Rig__c/fields/Mining_Site__c.field-meta.xml
<CustomField>
    <fullName>Mining_Site__c</fullName>
    <description>The Mining Site where this Rig is located.</description>
    <inlineHelpText>The Mining Site where this Rig is located.</inlineHelpText>
    <label>Mining Site</label>
    <referenceTo>Mining_Site__c</referenceTo>
    <relationshipLabel>Rigs</relationshipLabel>
    <relationshipName>Rigs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>