Asteria/force-app/main/default/objects/Rig__c/fields/Mining_Site_List__c.field-meta.xml
<CustomField>
    <fullName>Mining_Site_List__c</fullName>
    <label>Mining Site</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Mining_Site</valueSetName>
    </valueSet>
</CustomField>