Asteria/force-app/main/default/objects/Rig__c/fields/Squad__c.field-meta.xml
<CustomField>
    <fullName>Squad__c</fullName>
    <description>The Squad currently assigned to this Rig.</description>
    <inlineHelpText>The Squad currently assigned to this Rig.</inlineHelpText>
    <label>Squad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Squad</valueSetName>
    </valueSet>
</CustomField>