Asteria/force-app/main/default/objects/Rig__c/validationRules/Assigned_Squad_Must_Pass_DNA_Test.validationRule-meta.xml
<ValidationRule>
    <fullName>Assigned_Squad_Must_Pass_DNA_Test</fullName>
    <active>true</active>
    <description>Before a Squad can be assigned to a Rig, all associated Crew Members must have verified DNA Test results.</description>
    <errorConditionFormula>AND(ISPICKVAL(Squad__c,&apos;ALPHA&apos;),ISPICKVAL(Crew_Members__r.Crew_List__c,&apos;ALPHA&apos;),Crew_Members__r.DNA_Test__c=FALSE)</errorConditionFormula>
    <errorMessage>Before a Squad can be assigned to a Rig, all associated Crew Members must have verified DNA Test results.</errorMessage>
</ValidationRule>